create endpoints for location module
