# src/modules/location/location.validator.js
@@ -1,0 +1,36 @@
+import { z } from "zod";
+import { LOCATION } from "./location.constant.js";
+
+export const getLocationsSchema = z.object({
+  query: z.object({
+    page: z.coerce.number().int().positive().default(1),
+
+    limit: z.coerce.number().int().positive().max(100).default(10),
+
+    search: z.string().trim().optional(),
+
+    type: z
+      .string()
+      .trim()
+      .transform((val) => val.toUpperCase())
+      .pipe(z.enum(LOCATION.TYPES))
+      .optional(),
+
+    sortBy: z.enum(LOCATION.SORT_FIELDS).default("name"),
+
+    sortOrder: z.enum(LOCATION.SORT_ORDERS).default("asc"),
+  }),
+});
+
+export const getLocationBySlugSchema = z.object({
+  params: z.object({
+    slug: z
+      .string()
+      .trim()
+      .min(1, "Slug is required")
+      .regex(
+        /^[a-zA-Z0-9\s-]+$/,
+        "Slug can only contain letters, numbers, spaces and hyphens",
+      ),
+  }),
+});
